--- a/index.html
+++ b/index.html
@@ -79,7 +79,23 @@ $('#divideButton').click(function(){
 <h2>Subtraction (Make this one by copying the addition code)</h2>
 Select and Copy the addition code (ctrl+c) and paste it here (ctrl+v).
 Go through and change add to subtract everywhere. Also, change the plus sign to a minus sign.
-
+<h2>Basic Subtraction</h2>
+<input value="1" id="subtract1">
+plus
+<input value="2" id="add2">
+<input type="button" value="equals" id="subtractButton">
+<span id="subtractResult"></span>
+<script>
+$('#subtractButton').click(function(){
+// Get numbers from the two boxes.
+var add1 = Number($('#add1').val());
+var add2 = Number($('#add2').val());
+// Add the two numbers together and store them as result.
+var result = subtract1 - subtract2;
+// Show the result.
+$('#subtractResult').text(result)
+})
+</script>
 
 
 
