--- a/index.html
+++ b/index.html
@@ -81,15 +81,15 @@ Select and Copy the addition code (ctrl+c) and paste it here (ctrl+v).
 Go through and change add to subtract everywhere. Also, change the plus sign to a minus sign.
 <h2>Basic Subtraction</h2>
 <input value="1" id="subtract1">
-plus
+minus
 <input value="2" id="add2">
 <input type="button" value="equals" id="subtractButton">
 <span id="subtractResult"></span>
 <script>
 $('#subtractButton').click(function(){
 // Get numbers from the two boxes.
-var add1 = Number($('#add1').val());
-var add2 = Number($('#add2').val());
+var add1 = Number($('#subtract1').val());
+var add2 = Number($('#subtract2').val());
 // Add the two numbers together and store them as result.
 var result = subtract1 - subtract2;
 // Show the result.
