--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ Go through and change add to subtract everywhere. Also, change the plus sign to 
 <h2>Basic Subtraction</h2>
 <input value="1" id="subtract1">
 minus
-<input value="2" id="add2">
+<input value="2" id="subtract2">
 <input type="button" value="equals" id="subtractButton">
 <span id="subtractResult"></span>
 <script>
