--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@ minus
 <script>
 $('#subtractButton').click(function(){
 // Get numbers from the two boxes.
-var add1 = Number($('#subtract1').val());
-var add2 = Number($('#subtract2').val());
+var subtract1 = Number($('#subtract1').val());
+var subtract2 = Number($('#subtract2').val());
 // Add the two numbers together and store them as result.
 var result = subtract1 - subtract2;
 // Show the result.
