--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ $('#parameterButton').click(function(){
   var width = Number($('#width').val())
   var height = Number($('#height').val())
   // Fill in the formula for a parameter here:
-  var result = width * height
+  var result = width + height + width +height
   $('#parameterResult').text(result)
 })
 </script>
