--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@ $('#dissappearButton').click(function(){
 </script>
 
 
-<h2>Reappearing Trick (You'll need to finish this one)</h2>
+<h2>Reappearing Trick</h2>
 <input type="button" id="reappearButton" value="Make it Come back">
 <script>
 $('#reappearButton').click(function(){
