--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ $('#multiplyButton').click(function(){
 
 
 
-<h2>Division (Fill in this formula yourself)</h2>
+<h2>Division</h2>
 <input value="1" id="divide1">
 divide by
 <input value="2" id="divide2">
@@ -97,7 +97,7 @@ $('#subtractResult').text(result)
 
 
 
-<h2>Parameter of a Rectangle (Fill in the formula)</h2>
+<h2>Parameter of a Rectangle</h2>
 Width:
 <input value="2" id="width">
 Height:
