--- a/index.html
+++ b/index.html
@@ -227,9 +227,12 @@ $('#randomButton2').click(function(){
 <h2>Even bigger Random Numbers (Finish this one yourself.)</h2>
 Get a random number between 1 and
 <input id="howBig" value="20">
-<input type="button" id="randomButton3" value="Go"> <span id="randomResult3"></span>
+<input type="button" id="randomButton3" value="Get a random number between 1 and 20"> <span id="randomResult3"></span>
 <script>
-// Can you figure out how to do this one?
+$('#randomButton2').click(function(){
+  var result = Math.random()
+  result = Math.ceil(result * 20)
+  $('#randomResult2').text(result)// Can you figure out how to do this one?
 </script>
 
 
