--- a/index.html
+++ b/index.html
@@ -229,10 +229,7 @@ Get a random number between 1 and
 <input id="howBig" value="20">
 <input type="button" id="randomButton3" value="Get a random number between 1 and 20"> <span id="randomResult3"></span>
 <script>
-$('#randomButton3').click(function(){
-  var result = Math.random()
-  result = Math.ceil(result * 20)
-  $('#randomResult3').text(result)// Can you figure out how to do this one?
+// Can you figure out how to do this one?
 </script>
 
 
@@ -242,11 +239,7 @@ I'm thinking of a number between 1 and 10. What do you think it is?
 <input id="guessButton" type="button" value="guess">
 <span id="guessAnswer"></span>
 <script>
-$('#randomButton2').click(function(){
-  var result = Math.random()
-  result = Math.ceil(result * 10)
-  $('#randomResult2').text(result)
-})  
+
   
 </script>
 
