--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@ Get a random number between 1 and
 <script>
 $('#randomButton3').click(function(){
   var result = Math.random()
-  result = Math.ceil(result * 20)
+  result = Math.ceil(result * value)
   $('#randomResult3').text(result)
 })
 </script>
