--- a/index.html
+++ b/index.html
@@ -238,12 +238,11 @@ I'm thinking of a number between 1 and 10. What do you think it is?
 <input id="guessButton" type="button" value="guess">
 <span id="guessAnswer"></span>
 <script>
-$('#guessBox').click(function(){
+$('#guessAnswer').click(function(){
   var result = Math.random()
   result = Math.ceil(result * 10)
-  $('#guessBox').text(result)
+  $('#guessAnswer').text(result)
 })
-  
 </script>
 
 
