--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@ I'm thinking of a number between 1 and 10. What do you think it is?
 <input id="guessButton" type="button" value="guess">
 <span id="guessAnswer"></span>
 <script>
-$('#guessAnswer').click(function(){
+$('#guessButton').click(function(){
   var result = Math.random()
   result = Math.ceil(result * 10)
   $('#guessAnswer').text(result)
