--- a/index.html
+++ b/index.html
@@ -273,5 +273,5 @@ $('#recallButton').click(function(){
 
 <p><a href="tictactoe.html">Tic Tac Toe</a></p>
 <p><a href="map.html">The map</a></p>
-
+<h2>This is my webpage</h2>
 </body>
