--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ $('#subtractResult').text(result)
 })
 </script>
 
-<h2>Multiplication</h2>
+<h2>Basic Multiplication</h2>
 <input value="1" id="multiply1">
 times
 <input value="2" id="multiply2">
@@ -73,7 +73,7 @@ $('#multiplyButton').click(function(){
 
 
 
-<h2>Division</h2>
+<h2>Basic Division</h2>
 <input value="1" id="divide1">
 divide by
 <input value="2" id="divide2">
