--- a/index.html
+++ b/index.html
@@ -274,4 +274,5 @@ $('#recallButton').click(function(){
 <p><a href="tictactoe.html">Tic Tac Toe</a></p>
 <p><a href="map.html">The map</a></p>
 <h2>This is my webpage</h2>
+<h2>Food</h2>  
 </body>
