--- a/index.html
+++ b/index.html
@@ -275,4 +275,6 @@ $('#recallButton').click(function(){
 <p><a href="map.html">The map</a></p>
 <h2>This is my webpage</h2>
 <h2>Food</h2>  
+<h2>Canelopes</h2>
+  <h2>Fish Fillets</h2>
 </body>
