--- a/index.html
+++ b/index.html
@@ -92,12 +92,12 @@ $('#divideButton').click(function(){
 </script>
 
 
-<h2>Parimeter of a Rectangle</h2>
+<h2>Perimeter of a Rectangle</h2>
 Width:
 <input value="2" id="widthBox">
 Height:
 <input value="3" id="height">
-<input type="button" value="calcuate parameter" id="parameterButton">
+<input type="button" value="calcuate perimeter" id="perimeterButton">
 <span id="perimeterResult"></span>
 <script>
 $('#perimeterButton').click(function(){
